# Project_Chat

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  compose.yaml  load_test_result.json
.git.corrupt/: COMMIT_EDITMSG  config  packed-refs
.git.corrupt/objects/pack/: pack-908d3e657c70fc7bff0c3218dd50d601d4f78723.idx  pack-908d3e657c70fc7bff0c3218dd50d601d4f78723.pack  pack-908d3e657c70fc7bff0c3218dd50d601d4f78723.rev
client/: client.cpp
config/: config.json
include/: Acceptor.h  Buffer.h  Channel.h  EventLoop.h  EventLoopThread.h  EventLoopThreadPool.h  FileSink.h  LogLevel.h  LogMacros.h  LogSink.h  Logger.h  Socket.h  StderrSink.h  TcpConnection.h  TcpServer.h  ThreadPool.h  ThreadSaveQueue.h  Timer.h  TimerId.h  TimerQueue.h  threadSaveQueue.h  until.h
include/auth/: AccountIdGenerator.h  AuthResult.h  AuthService.h  TokenManager.h
include/common/: ConversationKey.h
include/config/: AppConfig.h  ConfigParseHelper.h  DatabaseConfig.h  DbAsyncConfig.h  HealthConfig.h  IdConfig.h  ImConfig.h  LogConfig.h  MaintenanceConfig.h  MessageAsyncConfig.h  NetConfig.h  RedisConfig.h  ServerConfig.h  StorageConfig.h
include/congfig/: AppConfig.h  ConfigParseHelper.h  ImConfig.h  LogConfig.h  NetConfig.h  ServerConfig.h
include/id/: SnowflakeGenerator.h
include/im/: AuthService.h  ConversationKey.h  ConversationService.h  DirectMessagePersistenceService.h  DirectMessagePersistenceTypes.h  ErrorCode.h  FriendService.h  Group.h  GroupJoinService.h  GroupManager.h  GroupMessagePersistenceService.h  GroupMessagePersistenceTypes.h  GroupRole.h  GroupService.h  HistoryQuery.h  ImCodec.h  ImMessage.h  ImService.h  MessageAckService.h  MessageSyncService.h  MsgType.h  RoomManager.h  Session.h  SessionManager.h  SyncModels.h  SyncParseResult.h
include/infra/health/: HealthFormatter.h  HealthService.h  HealthSnapshot.h
include/infra/maintenance/: MaintenanceService.h  MaintenanceStats.h
include/infra/redis/: RedisClient.h
include/infra/signal/: SignalHandler.h
include/infra/thread/: KeyedSerialExecutor.h  TheadType.h  ThreadPool.h  ThreadSafeQueue.h  ThreadTypes.h
include/logger/: AsyncLogger.h  FileSink.h  LogContext.h  LogMacros.h  Logger.h  LoggerStats.h  StderrSink.h
include/net/: OutboundFrame.h  SendTypes.h
include/security/: PassWordHasher.h  PasswordHasher.h  RateLimitKeyType.h  RateLimitStore.h  RateLimiter.h  RedisRateLimitStore.h  TokenManager.h
include/security/rate_limit/: RateLimitStore.h  RateLimiter.h  RedisRateLimitStore.h
include/storage/: ConversationRepo.h  DirectMessageWriteStore.h  FriendRepo.h  FriendRequestRepo.h  GroupJoinRequestRepo.h  GroupMessageWriteStore.h  GroupRepo.h  MessageRepo.h  OfflineMessageRepo.h  RepoResult.h  RepoValueResult.h  RepositoryBundle.h  RepositoryFactory.h  UserProfileRepo.h  UserRepo.h  UserSessionRepo.h
include/storage/memory/: MemoryGroupRepo.h  MemoryMessageRepo.h  MemoryUserRepo.h
include/storage/sql/: PreparedStatementCache.h  SqLGroupJoinRequestRepo.h  SqlConnection.h  SqlConnectionGuard.h  SqlConnectionPool.h  SqlConnectionPoolOptions.h  SqlConversationRepo.h  SqlDirectMessageWriteStore.h  SqlErrorMapper.h  SqlFriendRepo.h  SqlFriendRequestRepo.h  (+12 more)
include/timer/: Timer.h  TimerId.h  TimerQueue.h  TimerTypes.h
load-results/: 100c_0_5r.json  100c_1r.json  100c_2r.json  100c_5r.json  20c_1r_smoke.json  20c_5r.json  50c_1r.json  50c_2r.json  50c_5r.json  mixed_1000c_100qps.json  mixed_1000c_500qps.json  mixed_100c_100qps.json  mixed_20c_20qps.json  mixed_500c_300qps.json  mixed_load_result.json  mixed_load_summary.csv  summary.csv
load-results/connection-20260717-165615/: 1000c_10min.json  100c_3min.json  500c_5min.json  summary.csv
load-results/connection-cycle-20260717-172428/: 1000c_round_1.json  1000c_round_2.json  1000c_round_3.json  summary.csv  transport_5000c_10min.json
load-results/knee-1000c-20260717-200639/: 1000c_100qps.json  1000c_150qps.json  1000c_200qps.json  1000c_250qps.json  1000c_300qps.json  summary.csv
load-results/v2-20260717-143056/: 100c_0_5r.json  100c_2r.json  100c_2r_1k.json  100c_5r_saturation.json  20c_1r_smoke.json  20c_5r.json  50c_1r.json  50c_5r.json  summary.csv
load-results/v3-20260717-153011/: 100c_2r_staggered.json  100c_3_5r_staggered.json  100c_3r_10min.json  100c_3r_staggered.json  100c_4_2r_staggered.json  100c_4_5r_staggered.json  100c_4r_staggered.json  100c_5r_staggered.json  summary.csv
server/: server.cpp
sql/: ProjectChat-MySQL.session.sql  schema.sql
src/: Acceptor.cpp  Buffer.cpp  Channel.cpp  EventLoop.cpp  EventLoopThread.cpp  EventLoopThreadPool.cpp  Logger.cpp  Socket.cpp  TcpConnection.cpp  TcpServer.cpp  ThreadPool.cpp  Timer.cpp  TimerId.cpp  TimerQueue.cpp  main.cpp  server  threadSaveQueue.cpp  until.cpp
src/auth/: AccountIdGenerator.cpp  AuthService.cpp  TokenManager.cpp
src/config/: AppConfig.cpp  DatabaseConfig.cpp  DbAsyncConfig.cpp  HealthConfig.cpp  IdConfig.cpp  Imconfig.cpp  LogConfig.cpp  MaintenanceConfig.cpp  MessageAsyncConfig.cpp  NetConfig.cpp  RedisConfig.cpp  ServerConfig.cpp  StorageConfig.cpp
src/id/: SnowflakeIdGenerator.cpp
src/im/: AuthService.cpp  ConversationService.cpp  DirectMessagePersistenceService.cpp  FriendService.cpp  Group.cpp  GroupJoinService.cpp  GroupManager.cpp  GroupMessagePersistenceService.cpp  GroupService.cpp  ImCodec.cpp  ImService.cpp  MessageAckService.cpp  MessageSyncService.cpp  RoomManager.cpp  SessionManager.cpp
src/logger/: AsyncLogger.cpp  LogContext.cpp  Logger.cpp
src/net/: OutboundFrame.cpp
src/security/: PasswordHasher.cpp  RateLimiter.cpp  RedisRateLimitStore.cpp  TokenManager.cpp
src/storage/: GroupRepo.cpp  RepositoryBundle.cpp  RepositoryFactory.cpp
src/timer/: Timer.cpp  TimerId.cpp  TimerQueue.cpp
tools/: connection_load_test.cpp  load_test.cpp  load_test_accounts.json  load_test_accounts_100.json  long_connection_accounts_1000.json  mixed_load_manifest_1000.json  mixed_load_test.cpp  sql_repo_test.cpp
tools/load_test_groups/: load_test_accounts_100.json  load_test_accounts_20.json  load_test_accounts_50.json  manifest.json
(+41 files in other folders)
